fixing image on smaller devices

--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -5,7 +5,6 @@
   float: left;
   background-image: url('../../../assets/fundo-curso.png');
   background-color: var(--primary-color);
-  background-size: 100% 100%;
   background-position: center bottom;
   background-repeat: no-repeat;
 }
